[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/background_plain.png" type="Texture" id=1]
[ext_resource path="res://themes/custom_theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/Profile_Menu.gd" type="Script" id=3]
[ext_resource path="res://sounds/BoxCat-Games-Epic-Song.mp3" type="AudioStream" id=5]

[node name="profile_menu" type="Node2D"]
script = ExtResource( 3 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="Back_Button" type="Button" parent="."]
margin_left = 1500.0
margin_top = 850.0
margin_right = 1800.0
margin_bottom = 1000.0
theme = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 41.0
margin_top = 49.0
margin_right = 764.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="general_profile_info_title" type="Label" parent="."]
margin_left = 61.0
margin_top = 82.0
margin_right = 262.0
margin_bottom = 122.0
theme = ExtResource( 2 )
text = "General info:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name_title_label" type="Label" parent="."]
margin_left = 89.0
margin_top = 127.0
margin_right = 215.0
margin_bottom = 167.0
theme = ExtResource( 2 )
text = "name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name_value_label" type="Label" parent="."]
margin_left = 356.0
margin_top = 127.0
margin_right = 599.0
margin_bottom = 167.0
theme = ExtResource( 2 )
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_title_label" type="Label" parent="."]
margin_left = 89.0
margin_top = 171.0
margin_right = 282.0
margin_bottom = 211.0
theme = ExtResource( 2 )
text = "score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_value_label" type="Label" parent="."]
margin_left = 355.0
margin_top = 169.0
margin_right = 598.0
margin_bottom = 209.0
theme = ExtResource( 2 )
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="selected_boost_title_label" type="Label" parent="."]
margin_left = 89.0
margin_top = 216.0
margin_right = 332.0
margin_bottom = 256.0
theme = ExtResource( 2 )
text = "selected boost:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="selected_boost_value_label" type="Label" parent="."]
margin_left = 355.0
margin_top = 214.0
margin_right = 598.0
margin_bottom = 254.0
theme = ExtResource( 2 )
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="."]
margin_left = 42.0
margin_top = 291.0
margin_right = 765.0
margin_bottom = 324.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boost_list_info_title" type="Label" parent="."]
margin_left = 66.0
margin_top = 333.0
margin_right = 531.0
margin_bottom = 373.0
theme = ExtResource( 2 )
text = "Boost list: (story mode only)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boosts_ItemList" type="ItemList" parent="."]
margin_left = 53.0
margin_top = 414.0
margin_right = 759.0
margin_bottom = 778.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select_Boost_Button" type="Button" parent="."]
margin_left = 303.0
margin_top = 813.0
margin_right = 478.0
margin_bottom = 891.0
theme = ExtResource( 2 )
text = "Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="pressed" from="Back_Button" to="." method="_on_Back_Button_pressed"]
[connection signal="focus_exited" from="Boosts_ItemList" to="." method="_on_Boosts_ItemList_focus_exited"]
[connection signal="item_selected" from="Boosts_ItemList" to="." method="_on_Boosts_ItemList_item_selected"]
[connection signal="nothing_selected" from="Boosts_ItemList" to="." method="_on_Boosts_ItemList_nothing_selected"]
[connection signal="pressed" from="Select_Boost_Button" to="." method="_on_Select_Boost_Button_pressed"]
